# Clion_with_QT_ffmpeg_opencv

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
